Fixed spacing of description field to be aligned left; added small amount of padding to right as well

--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -200,6 +200,11 @@ End Synapse color scheme
 	width: 0px;
 }
 
+.descriptionField {
+	text-align: left;
+	padding-right: 5px;
+}
+
 .mainPageHeader {
 	border: 1px solid black;
 	padding: 10px;
